--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                selamatt hari bertambahh umurr ZASKIA NADIA AQILA sayaanggg, wish youu all the best yaa🥳🥳🥳 ga kerasaa yaa udahh bertambahh umurr ajaa nihh, udahh tambahh gedee ajaa walaupunn di mata akuu sii kamuu masihh keliatan kek bocil😝 but thats not what I meant to say, di sini, di hari spesial kiaa inii, aku pengenn ngucapinn mungkinn beberapaa harapann akuu buatt kiaa kedepannya, walaupunn sebenernyaa gaada lagii yang bisaa akuu harapinn dari cewee sesempurnaa kiaa yang selaluu bisaa bikinn bangga pacarnyaa inii, kiaa selaluu bisaa menuhinn ekspektasi akuu bahkann tanpa akuu mintaa, bukann cuman aku, semuaa orang yang adaa di dekatt kiaa pasti ngerasainn hal yang samaa, kiaa selaluu bisaa ngelebihinn ekspektasi dan harapann semuaa orang, thats what makes me proud to be yourr boyfriend💗 jujurr, sebenarnyaa banyakk bangett yang pengenn akuu sampeinn ke kiaa, but for now akuu pengenn ngucapinn selamatt ulang tahunn duluu, so lanjutt ajaa yaa ke slide berikutnyaa➡
+                selamatt hari bertambahh umurr ZASKIA NADIA AQILA sayaanggg, wish youu all the best yaa🥳🥳🥳 ga kerasaa yaa udahh bertambahh umurr ajaa nihh, udahh tambahh gedee ajaa walaupunn di mata akuu sii kamuu masihh keliatan kek bocil😝 but thats not what I meant to say, di sini, di hari spesial kiaa inii, aku pengenn ngucapinn mungkinn beberapaa harapann akuu buatt kiaa kedepannya dan jugaa harapann buatt kitaa jugaa, but keknyaa gabakal muatt kalo aku ungkapinn di sini semuaa jadii lanjutt di chat ajaa yaa sayaangg💗 buat sekarang, silahkann lanjutt duluu ke slide berikutnyaa yaa➡
                 </p>
                 <p class="fake-btn">Kirim</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">thats all I wanted to say</p>
+            <p class="idea-1">so, thats all I wanted to say</p>
             <p class="idea-2">at least FOR NOW.</p>
             <p class="idea-3">
-                cuz aku pengenn ngomong sesuatu lagi, sesuatu yang<br>
+                oiyaa aku pengenn ngomong sesuatu lagi, sesuatu yang<br>
                 <strong>spesial</strong>
                 .
             </p>
