--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 HAIII
                 <span id="name">KIAAA <3</span>
             </h1>
-            <p class="two" id="greetingText">adaa yang pengenn aku sampeinn buatt kiaa</p>
+            <p class="two" id="greetingText">akuu pengenn ngasihh liat sesuatuu, STAY TUNE YAA</p>
         </div>
 
         <div class="three">
